# salary_compare

./: .flake8  .gitignore  Makefile  README.md  app.py  app_basic.py  app_i18n_example.py  app_with_charts.py  pyproject.toml  run_app.py
salary_compare/: __init__.py  __main__.py  registry.py  universal_calculator.py
salary_compare/calculators/: __init__.py  czechia.py  german_tax_formula.py  germany.py  israel.py
salary_compare/calculators/tests/: __init__.py  test_czechia.py  test_germany.py
salary_compare/cli/: __init__.py  main.py
salary_compare/configs/: __init__.py  bulgaria.py  czechia.py  france.py  germany.py  israel.py  portugal.py  romania.py  spain.py
salary_compare/models/: __init__.py  config.py  employee.py  enums.py  tax_result.py
salary_compare/output/: __init__.py  console.py  csv.py  html.py
salary_compare/services/: __init__.py  currency.py
salary_compare/strategies/: __init__.py  base.py  deductions.py  tax_base.py
streamlit_app/: main.py
streamlit_app/components/: charts.py  detailed_breakdown.py  sidebar.py  summary_table.py
streamlit_app/config/: constants.py
streamlit_app/styling/: country_styling.py  rtl_support.py
streamlit_app/utils/: calculations.py  country_utils.py
tests/: conftest.py
translations/: README.md  __init__.py  compile_translations.py  gettext_example.py  i18n.py  manage_translations.py  translation_manager.py
translations/locale/ar/LC_MESSAGES/: salary_compare.mo  salary_compare.po
translations/locale/he/LC_MESSAGES/: salary_compare.mo  salary_compare.po
translations/locale/ru/LC_MESSAGES/: salary_compare.mo  salary_compare.po
