[tool.poetry]
name = "salary-compare"
version = "1.0.0"
description = "A tool for calculating and comparing net salaries across countries"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "salary_compare"}]

[tool.poetry.dependencies]
python = "^3.8.1"
click = "^8.0.0"
tabulate = "^0.9.0"
jinja2 = "^3.0.0"
rich = "^13.0.0"
pydantic = "^2.0.0"
requests = "^2.28.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[tool.poetry.scripts]
salary = "salary_compare.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.pytest.ini_options]
testpaths = ["salary_compare"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
