[tool.poetry]
name = "salary-compare"
version = "1.0.0"
description = "A tool for calculating and comparing net salaries across countries"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "salary_compare"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.0.0"
tabulate = "^0.9.0"
jinja2 = "^3.0.0"
rich = "^13.0.0"
pydantic = "^2.0.0"
requests = "^2.28.0"
streamlit = "^1.50.0"
plotly = "^6.3.1"
polib = "^1.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.18.2"
isort = "^7.0.0"
pylint = "^4.0.0"
types-requests = "^2.32.4.20250913"

[tool.poetry.scripts]
app = "streamlit_app.main:main"
salary-compare = "streamlit_app.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["salary_compare"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
    "W0212",  # protected-access
]

[tool.pylint.design]
max-args = 8
max-attributes = 12
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
